files/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-db
  namespace: api
subsets:
  - addresses:
      - ip: 192.168.1.100 # для примера
    ports:
      - port: 5432 # для примера
